--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 <p>In your Hugo site <code>themes</code> directory, run:</p>
 
-<pre><code>git clone https://github.com/
+<pre><code>git clone https://github.com/pixelcrash/Mark-Rabadan-Theme.git
 </code></pre>
 
 <p>Next, open <code>config.toml</code> in the base of the Hugo site and ensure the theme option is set to <code>blank</code>.</p>
